--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts5": "^5.2.17",
     "@angular-slider/ngx-slider": "^2.0.4",
     "@angular/animations": "13.2.2",
     "@angular/cdk": "^13.3.4",
